--- a/views/reports.html
+++ b/views/reports.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>The Iron Riders - Attendance - Reports</h1>
+            <h1><b>Attendance - Management</b></h1>
             <div class="nav">
                 <a href="/management">Management</a>
                 <a href="/reports" class="active">Reports</a>
