--- a/views/management.html
+++ b/views/management.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>The Iron Riders - Attendance - Management</h1>
+            <h1><b>Attendance - Management</b></h1>
             <div class="nav">
                 <a href="/management" class="active">Management</a>
                 <a href="/reports">Reports</a>
