--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,7 +74,7 @@
 
 body {
   font-family: "Source Sans 3", Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #2f332e;
+  background-image: linear-gradient(135deg, #3f7536 0%, #1b2e18 80%);
   line-height: 1.6;
 }
 
@@ -417,7 +417,7 @@ tr:hover {
 }
 
 .calendar-header {
-  background-color: #ff00cc;
+  background-color: #1b2e18;
   color: white;
   padding: 10px;
   text-align: center;
@@ -823,6 +823,7 @@ tr:hover {
   align-items: center;
   padding: 8px 0;
   border-bottom: 1px solid #eee;
+  color: #fff;
 }
 
 .user-status-item:last-child {
