--- a/views/management.html
+++ b/views/management.html
@@ -8,6 +8,7 @@
         rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Management - The Iron Riders - Attendance</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
